--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.0",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-reanimated": "^3.15.5",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
